--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ coreschema==0.0.4
 decorator==5.1.1
 Django==4.2.1
 django-cors-headers==4.0.0
+django-extensions==3.2.3
 djangorestframework==3.14.0
 drf-yasg==1.21.5
 executing==1.2.0
@@ -24,6 +25,7 @@ packaging==23.1
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.5.0
 prompt-toolkit==3.0.38
 ptyprocess==0.7.0
 pure-eval==0.2.2
