--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ Django==4.2.1
 django-cors-headers==4.0.0
 django-debug-toolbar==4.1.0
 django-extensions==3.2.3
+django-filter==23.2
+django-ordered-model==3.7.4
 djangorestframework==3.14.0
 drf-yasg==1.21.5
 executing==1.2.0
@@ -18,7 +20,7 @@ idna==3.4
 inflection==0.5.1
 ipython==8.14.0
 itypes==1.2.0
-jedi==0.18.2
+jedi==0.18.24
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
@@ -33,6 +35,7 @@ pure-eval==0.2.2
 Pygments==2.15.1
 python-dateutil==2.8.2
 pytz==2023.3
+PyYAML==6.0.1
 requests==2.31.0
 ruamel.yaml==0.17.31
 ruamel.yaml.clib==0.2.7
