--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2023.5.7
 charset-normalizer==3.1.0
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==7.3.1
 decorator==5.1.1
 Django==4.2.1
 django-cors-headers==4.0.0
@@ -20,7 +21,7 @@ idna==3.4
 inflection==0.5.1
 ipython==8.14.0
 itypes==1.2.0
-jedi==0.18.24
+jedi==0.18.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
